I hate commit with the console, fuck you IntelliJ because you won't detect my git project anymore